# fastapi-react-openapi

./: .gitignore  main.py  openapi.json  package-lock.json  package.json  pyproject.toml
backend/: main.py
frontent/: package-lock.json  package.json
frontent/src/api/: api.ts
