[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "fastapi-react-openapi"
version = "0.1.0"
description = ""
authors = ["Luis R. <lri@me.com>"]
license = "MIT"

packages = [
    { include = "backend" },
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63"
uvicorn = "^0.13"
pydantic = "^1.8.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
start = "backend.main:main"
